fix for inner wrap on block

--- a/support/blocks/slides/_style-block.scss
+++ b/support/blocks/slides/_style-block.scss
@@ -137,6 +137,8 @@
 	padding-left: 30px;
 	padding-right: 30px;
 	margin-top: -75px;
+	max-height: 80%;
+	overflow-y: auto;
 	@media screen and (min-width: $med-width) {
 		padding-top: 70px;
 		padding-bottom: 70px;
